Adds a lot of stuff. MonsterList8, fixes final boss message, the game is actually beatable, fixes bugs, adds ItemList7, adds corrupted and elite dmg modifiers.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /saveGame.ser
+/out/production/MyFirstRPG/ListOfItems.class
+/out/production/MyFirstRPG/ListOfMonsters.class
+/out/production/MyFirstRPG/Main$1.class
+/out/production/MyFirstRPG/SaveLoad.class
+/out/
